css/custom-myturn-styles-admin.css
/* always present, not just in print CSS */

/* hide the membership type badge */
span .badge { display: none; }

/* hide the mailto envelope icons */
a:has(i.fa-envelope) { display: none !important; } 

/* make the alert text for problem items show up on the page */
.badge-danger::after {
    content: attr(data-original-title);
    display: inline-block;
    margin-left: 8px;
    color: white !important;
    background: #F3565D !important;
    padding: 2px 6px;
    border-radius: 3px;
    font-size: 1.2rem;
    font-weight: bold;
}

/* style the inline user alert message that's created by the script */
.inline-warning {
    padding: 4px 8px;
    background: white;
    color: #F3565D;
    font-weight: normal;
    display: inline-block;
    max-width: 300px;
}

/* style the date if unfulfilled order date has passed */
.unfulfilled-reservation-date { display: block; }

/* style the pickup days missed message */
.pickup-days-missed {
    display: block;
    color: #F3565D;
    font-size: 1.5rem;
}

/* .hidden-xs, .hidden-sm, .hidden-md { display: none; } why did i have this? */

/* make reservation notes bigger */
div.reservation-notes { font-size: 20px !important; }

/* print stylesheet only */
@media print {

    /* delete stuff at top of page */
    h3.page-title, div.portlet-title { display: none; }

    /* hide reservation number */
    .col-sm-5 { font-size: 0 !important; } /* make text in that column 0 */ 
    div .panel-heading, .col-sm-5 * { font-size: 30px !important; } /* but then give all that column's children a text size back again */ 

    /* hide button rows */
    div.panel-body > div:nth-child(1) > div.col-sm-7.col-sm-push-5.text-right.margin-bottom-10 { display: none; }

    /* page break after each reservation, except the last one */
    .panel.reservation:not(:last-child) {
        break-after: page !important; }

    /* make the order status badges bigger */
    .badge.pull-right { display: none !important; }

    /* get rid of scroll to top button */
    .scroll-to-top { display: none !important; }

    /* make location bigger */
    table.table { font-size: 25px !important; }

    /* adjusting relative widths of dates and names */
    .col-sm-7 { width: 35%; font-size: 14px; }
    .col-sm-5 { width: 50%; }
    .col-xs-8.col-sm-9 { width: 90% !important; }
    .col-xs-4.col-sm-3 { width: 10%; }

    /* adjusting relative widths of items on table */
    th.col-xs-1 { width: 0px !important; }
    th.col-xs-3 { width: 15%; }
    th.col-xs-4 { width: 55%; }

    /* i don't want smalls */
    small { font-size: inherit !important; }

    /* i don't want the new history icon to print */
    i.fa-history { display: none !important; }

    /* hide the edit link on admin notes when printing */
    div.col-xs-3.col-sm-1.text-center { display: none !important; }

    /* for any col-sm-9 that contains a reservation notes div, make it 100% width to fill the space left by the display:none edit column and also to make it wrap so the "admin notes" label is stacked on top */
    .col-sm-9:has(.reservation-notes) { width: 100% !important; }

    /* target the location column (3rd td) to make it a monospace serif font for better legibility of I, l, and 1 */
    div.reservation table.table tbody tr td:nth-child(3) { font-family: monospace, serif !important; }

    /* make reservation table headers bigger */
    div.reservation table thead tr th { font-size: 20px !important; }

    /* make alert icons bigger when printing */
    .badge-danger, .reservation-alert, .reservation-alert i {
        font-size: 2rem !important;
        background: #F3565D !important;
        font-weight: bold;
        color: white;
        padding: 3px 10px;
        height: 3rem;
    }

    /* style the inline user alert message for print */
    .inline-warning {
        padding: 4px 8px;
        color: #F3565D !important;
        font-weight: normal;
        display: inline-block !important;
        font-size: 20px !important;
        max-width: 500px;
    }

    /* hide the email icon */
    i.fa-envelope { display: none !important; }

    /* remove color on borders */
    .panel.reservation, .panel.success, div.panel-heading { border-color: #ddd !important; }

    /* make alert text show up when printing */
    .badge-danger::after {
        content: attr(data-original-title);
        display: inline-block;
        margin: 8px;
        color: #F3565D !important;
        padding: 2px;
        border-radius: 3px;
        font-size: 25px !important;
        font-weight: bold;
    }

    /* style unfulfilled reservation date for print */
    .unfulfilled-reservation-date {
        display: block;
    }

    /* style pickup days missed for print */
    .pickup-days-missed {
        display: block;
        color: #F3565D !important;
        font-size: 1.5rem !important;
    }

} /* end print styles */

/* in the cart, style renewing items differently than check-in items */ 
tr.ttl-renewing.info td {
    background-color: #fff3cd !important;
  }
tr.ttl-renewing td:first-of-type::before {
    content: "RENEWAL";
    font-weight: bold;
    color: #7a5700;
    font-size: 1em;
    display: block;
  }
tr.ttl-checkin td:first-of-type::before {
    content: "CHECK IN";
    font-weight: bold;
    color: #3a5a3a;
    font-size: 1em;
    display: block;
  }

